- added section about listing environment variables.